--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ textarea {
 
 /*Large Background Image*/
 html {
-    background: url(../img/bkgd2.jpg) no-repeat center center fixed;
+    background: url(../img/pexels-ann-poan-5797903.jpg) no-repeat center center fixed;
     background-size: cover;
     height: 100%;
    /* set height to 100% - these are important for allowing content to vertically align */
@@ -110,12 +110,12 @@ body {
 
 .wrapper {
     /* set the display to flex and use the justify-content & align-items properties to center all child elements on the page */
-    margin: 0;
+    margin: 1em;
     height: 100%;
     width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 
 #content {
@@ -138,6 +138,10 @@ body {
 
 #content p span {
     font-family: 'Lora', sans-serif;
+}
+
+span {
+    font-weight: bold;
 }
 
 
